# chatters

./: .gitignore  README.md  docker-compose.yml
backend/: .env-example  Cargo.toml
backend/auth_service/: Cargo.toml
backend/auth_service/src/: main.rs
backend/auth_service/src/handlers/: auth.rs  token.rs
backend/auth_service/src/routes/: mod.rs
backend/chat_service/: Cargo.toml
backend/chat_service/src/: main.rs
backend/chat_service/src/handlers/: chats.rs  messages.rs
backend/chat_service/src/routes/chats/: mod.rs
backend/common/: Cargo.toml
backend/common/src/: appstate.rs  config.rs  lib.rs
backend/common/src/crypto/: hash.rs  token.rs
backend/common/src/middlewares/: mod.rs
backend/common/src/models/: chat.rs  messages.rs  mod.rs  users.rs
backend/migrations/: 20250428020758_users_table_create.up.sql  20250428021006_chat_table_create.down.sql  20250428021006_chat_table_create.up.sql  20250428060852_messages_table_create.up.sql
backend/streaming_service/: Cargo.toml
backend/streaming_service/src/: main.rs
backend/streaming_service/src/handlers/: webrtc copy.rs  webrtc.rs
backend/streaming_service/src/routes/webrtc/: mod.rs
backend/user_service/: Cargo.toml
backend/user_service/src/: main.rs
backend/user_service/src/handlers/: users.rs
backend/user_service/src/routes/users/: mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/js/: audio_player.js
frontend/src/: main.rs  rtc_network_manager.rs
frontend/src/common/: audio_recorder.rs  media_test.rs  mod.rs  wstest.rs
frontend/src/common/atoms/: mod.rs
frontend/src/common/atoms/buttons/: chat_switch_button.rs  custom_button.rs  logout_button.rs  mod.rs
frontend/src/common/atoms/chats/: chats_choice_sidebar.rs  chats_message_display.rs  mod.rs
frontend/src/common/atoms/errors/: error_display.rs  error_overlay_display.rs  mod.rs
frontend/src/common/atoms/input/: text_input.rs
frontend/src/common/atoms/sidebar/: body.rs  footer.rs  header.rs  mod.rs
frontend/src/common/atoms/users/: current_user_display.rs  mod.rs
frontend/src/common/molecules/: mod.rs
frontend/src/common/molecules/chats/: mod.rs  new_messages_box.rs  old_messages_box.rs
frontend/src/common/molecules/forms/: login_form.rs  register_form.rs
frontend/src/common/organisms/: chat.rs  mod.rs  sidebar.rs
frontend/src/common/pages/: login_page.rs  main_page.rs  mod.rs  user_main_page.rs
frontend/src/common/services/: audio_player_service.rs  audio_recording_service.rs  mod.rs  websocket.rs
frontend/src/routes/: auth.rs  users.rs
frontend/static/: styles.css
shared/: Cargo.toml
shared/src/models/: chats.rs  messages.rs  mod.rs  users.rs  websocket.rs
