[workspace]
members = ["common", "auth_service", "user_service", "streaming_service", "chat_service"]

[workspace.dependencies]
argon2 = "0.5.3"
axum = {version = "0.8.3", features = ["ws"]}
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
redis = { version = "0.30.0", features = ["tokio-comp"] }
rustls = {version = "0.23.27", features =["ring"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [ "runtime-tokio", "postgres", "uuid", "chrono" ] }
time = "0.3.41"
tokio = { version = "1.44.2", features = ["full", "macros"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
tower-http = {version = "0.6.2", features = ["cors"]}
futures-util = "0.3.31"
webrtc = "0.13.0"

shared = { path = "../shared" }