[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
gloo = "0.11.0"
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
lazy_static = "1.5.0"
yew = {version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde"] }
futures = "0.3.31"

shared = { path = "../shared" }

[dependencies.web-sys]
version = "0.3.77"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'RtcAnswerOptions',
  'RtcCertificate',
  'RtcCertificateExpiration',
  'RtcCodecStats',
  'RtcConfiguration',
  'RtcDataChannel',
  'RtcDataChannelEvent',
  'RtcDataChannelEventInit',
  'RtcDataChannelInit',
  'RtcDataChannelState',
  'RtcFecParameters',
  'RtcIceCandidate',
  'RtcIceCandidateInit',
  'RtcIceCandidatePairStats',
  'RtcIceCandidateStats',
  'RtcPeerConnectionIceEvent',
  'RtcIceComponentStats',
  'RtcIceServer',
  'RtcIdentityAssertion',
  'RtcIdentityAssertionResult',
  'RtcIdentityProvider',
  'RtcIdentityProviderDetails',
  'RtcIdentityProviderOptions',
  'RtcIdentityProviderRegistrar',
  'RtcIdentityValidationResult',
  'RtcInboundRtpStreamStats',
  'RtcMediaStreamStats',
  'RtcMediaStreamTrackStats',
  'RtcOfferAnswerOptions',
  'RtcOfferOptions',
  'RtcOutboundRtpStreamStats',
  'RtcPeerConnection',
  'RtcPeerConnectionIceEvent',
  'RtcPeerConnectionIceEventInit',
  'RtcRtcpParameters',
  'RtcRtpCodecParameters',
  'RtcRtpContributingSource',
  'RtcRtpEncodingParameters',
  'RtcRtpHeaderExtensionParameters',
  'RtcRtpParameters',
  'RtcRtpReceiver',
  'RtcRtpSender',
  'RtcRtpSourceEntry',
  'RtcRtpSynchronizationSource',
  'RtcRtpTransceiver',
  'RtcRtpTransceiverInit',
  'RtcRtxParameters',
  'RtcSessionDescription',
  'RtcSessionDescriptionInit',
  'RtcStats',
  'RtcStatsReport',
  'RtcStatsReportInternal',
  'RtcTrackEvent',
  'RtcTrackEventInit',
  'RtcTransportStats',
  'RtcIceConnectionState',
  'RtcIceGatheringState',
  'RtcSdpType',
  'RtcdtmfSender',
  'RtcdtmfToneChangeEvent',
  'RtcdtmfToneChangeEventInit',
  'RtcrtpContributingSourceStats',
  'RtcIceServer',
  'HtmlDocument',
  'MediaRecorder',
  'MediaStream',
  'HtmlAudioElement',
  'HtmlVideoElement',
  'TrackEvent',
  'Navigator',
  'MediaDevices',
  'MediaTrackSupportedConstraints',
  'DisplayMediaStreamConstraints',
  'MediaStreamConstraints',
  'MediaStreamTrack'
]