[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [ "uuid", "chrono" ] }
uuid = { version = "1.16.0", features = ["serde"] }