[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {workspace = true}
axum-extra = {workspace = true}
axum-server = {workspace = true}
dotenv = {workspace = true}
redis = {workspace = true}
rustls = {workspace = true}
chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
uuid = {workspace = true}
lazy_static = {workspace = true}
tokio = {workspace = true}
tracing-subscriber = {workspace = true}
time = {workspace = true}
tower-http = {workspace = true}

common = {path = "../common"}
shared = { workspace = true }