[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
base64 = {workspace = true}
redis = {workspace = true}
chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
sqlx = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
lazy_static = {workspace = true}
jsonwebtoken = {workspace = true}

shared = {workspace = true}